--- a/views/partials/carosels.ejs
+++ b/views/partials/carosels.ejs
@@ -12,7 +12,7 @@
         <video class="smallFrame" class="embed-responsive-item" src="<%= obj.videoURL %>" type="video/mp4" controls>
             Somethings Wrong.
         </video>
-        <div id="newsPanel" >
+        <div>
             <h3><%= obj.videoTitle %></h3>
             <p> <%= obj.videoBlurb %></p>
         </div>
@@ -22,10 +22,11 @@
 
 <% data.myNoticeArray.forEach(function(obj) { %>
     <div class="item center">
-        <div id="newsPanel">
-            <h3 id="newsTitle"><%= obj.noticeTitle %></h3>
-            <p id="newsContentPara"><%= obj.noticeContent %></p>
-            <p id="newsAuthor"><i>Written by - <%= obj.noticeAuthor %></i></p>
+        <div class="newsPanel">
+            <hidden class="hidden"><%= obj._id %></hidden>
+            <h3 class="newsTitle"><%= obj.noticeTitle %></h3>
+            <p class="newsContentPara"><%= obj.noticeContent.substring(0,300) %></p>
+            <p class="newsAuthor"><i>Written by - <%= obj.noticeAuthor %></i></p>
         </div>
     </div>
 
