--- a/views/partials/video.ejs
+++ b/views/partials/video.ejs
@@ -1,9 +1,9 @@
 <% myVidArray.forEach(function(obj) { %>
 <div id="newsPanel">
     <h3><%= obj.videoTitle %></h3>
-    <video class="smallFrame" class="embed-responsive-item" controls>
-        <source src="<%= obj.videoURL %>" type="video/mp4">
-        <!--<source src="/vids/v.ogg" type="video/ogg">-->
+    <video class="smallFrame" class="embed-responsive-item" controls
+     src="<%= obj.videoURL %>" type="video/mp4">
+
         Somethings Wrong.
     </video>
     <p> <%= obj.videoBlurb %></p>
