--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -3,61 +3,150 @@
     <title>Welcome</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
+    <link href="stylesheets/deadSimpleGrid.css" rel="stylesheet" type="text/css">
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container">
-    <form class='form-signin' action='' method='POST' enctype="multipart/form-data">
-        <h2 class='form-signin-heading'>Content Managment System</h2>
-        <label class='sr-only'>Notice Title</label>
-        <input type='text' name='noticeTitle' class='form-control' placeholder='Title' required autofocus>
-        <label class='sr-only'>Notice Content</label>
-        <input type="text" name='noticeContent' class='form-control' placeholder='Content' required>
-        <label class='sr-only'>Notice Author</label>
-        <input type='text' name='noticeAuthor' class='form-control' placeholder='Author' required>
-        <label for="noticeFeatured">Notice Featured</label>
-        <input type='checkbox' name='noticeFeatured' class='checkbox-inline' required>
-        <button class='btn btn-lg btn-primary btn-block' type='submit'>Upload Notice</button>
+
+
+<a href="/signout" id="signoutButton" class="btn btn-md btn-danger">Sign out</a>
+    <h2 class='form-signin-heading'>Content Managment System</h2>
+<div class="row indent">
+    <div class="col half">
+    <form class='form-signin' action='/upload' method='POST' enctype="multipart/form-data">
+        <fieldset>
+            <legend>Notice Editor</legend>
+            <input type='text' name='noticeTitle' class='form-control' placeholder='Title' required autofocus>
+            <input type="text" name='noticeContent' class='form-control' placeholder='Content' required>
+            <input type="text" name='noticeImage' class='form-control' placeholder='Image Name'>
+            <input type='text' name='noticeAuthor' class='form-control' placeholder='Author' required>
+            <label for="noticeFeatured">Notice Featured</label>
+            <input type='checkbox' name='noticeFeatured' class='checkbox-inline'>
+            <button class='btn btn-lg btn-primary btn-block' type='submit'>Upload Notice</button>
+        </fieldset>
     </form>
+        </div>
+        <div class="col half">
+    <form>
+        <fieldset>
+            <legend>Delete Notice</legend>
+            <select id="noticeSelect">
+                <% n.forEach(function(obj) { %>
+                <option> <%= obj %> </option>
+                <% }); %>
+            </select>
+            <button id="munter">Press Me</button>
+        </fieldset>
+    </form>
+            </div>
+    </div>
+<div class="row indent">
+    <div class="col half">
+    <form  action='/uploadVid' method='POST' enctype="multipart/form-data">
+        <fieldset>
+            <legend>Video Editor</legend>
+            <input type="text" name='videoTitle' class='form-control' placeholder='Title' required>
+            <input type="text" name='videoURL' class='form-control' placeholder='Video Name' required>
+            <input type='text' name='videoBlurb' class='form-control' placeholder='Blurb' required>
+            <label for="videoFeatured">Video Featured</label>
+            <input type='checkbox' name='videoFeatured' class='checkbox-inline'>
+            <button class='btn btn-lg btn-primary btn-block' type='submit'>Upload Video</button>
+        </fieldset>
+    </form>
+    </div>
+    <div class="col half">
+    <form>
+    <fieldset>
+    <legend>Delete Video</legend>
+    <select id="videoSelect">
+        <% v.forEach(function(obj) { %>
+        <option> <%= obj %> </option>
+        <% }); %>
+    </select>
+    <button id="punter">Press Me</button>
+    </fieldset>
+        </form>
+        </div>
+    </div>
+<div class="row indent">
+    <div class="col third">
+        <form action="/newpage" method="POST" enctype="multipart/form-data">
+            <fieldset>
+                <legend>Create Page</legend>
+                <label for="add">Page Name</label>
+                <input type="text" name="add" id="add">
+                <button type="submit">Create</button>
+            </fieldset>
+        </form>
+    </div>
+    <div class="col third">
     <form>
         <fieldset>
             <legend>Page Edit</legend>
             <select id="pageSelect">
                 <% p.forEach(function(obj) { %>
-                    <option> <%= obj %> </option>
-                <%});%>
+                <option> <%= obj %> </option>
+                <% }); %>
 
             </select>
             <button id="cunter">Press Me</button>
         </fieldset>
     </form>
-
-<form action="/newpage" method="POST" enctype="multipart/form-data">
-<fieldset>
-    <legend>Create Page</legend>
-    <label for="add">Page Name</label>
-    <input type="text" name="add" id="add">
-    <button type="submit">Create</button>
-</fieldset>
-</form>
-
-    <form method="post" enctype="multipart/form-data" action="/fileupload">
-        <legend>Upload File</legend>
+        </div>
+    <div class="col third">
+    <form>
         <fieldset>
-        <input type="file" name="file">
-        <input type="submit" value="Submit">
+            <legend>Page Delete</legend>
+            <select id="pageDelete">
+                <% p.forEach(function(obj) { %>
+                <option> <%= obj %> </option>
+                <% }); %>
+            </select>
+            <button id="bunter">Press Me</button>
         </fieldset>
     </form>
 </div>
+</div>
+    <form method="post" enctype="multipart/form-data" action="/fileupload">
+        <legend>Upload File</legend>
+        <fieldset>
+            <input type="file" name="file">
+            <input type="submit" value="Submit">
+        </fieldset>
+    </form>
+
 <script>
-    $('#cunter').click(function(){
+    $('#cunter').click(function () {
         var urler = 'upload/' + $('#pageSelect').val();
         window.location.href = urler;
+        return false
+    });
+
+    $('#bunter').click(function(){
+        var delly = confirm("Are you sure you want to delete " +  $('#pageDelete').val() + "?");
+        if(delly) {
+            var urly = 'del/' + $('#pageDelete').val();
+            window.location.href = urly;
+            return false;
+        }else{
+            alert("Deletion Aborted");
+        }
+    });
+    $('#munter').click(function(){
+        var urlerooni = 'delnotice/' + $('#noticeSelect').val();
+        window.location.href = urlerooni;
         return false;
     });
+    $('#punter').click(function(){
+        var urlereeno = 'delvideo/' + $('#videoSelect').val();
+        window.location.href = urlereeno;
+        return false;
+    });
+
+
 </script>
 </body>
 
