--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -25,19 +25,7 @@
 </div>
 
 <body>
-<div id="mainMenu" class="hidden">
-
-    <ul class="nav nav-stacked">
-        <li><a href="/"><i class="glyphicon glyphicon-home"></i>Home</a></li>
-        <li><a href="about"><i class="glyphicon glyphicon-question-sign"></i>About</a></li>
-        <li><a href="notice"><i class="glyphicon glyphicon-book"></i>News</a></li>
-        <li><a href="video"><i class="glyphicon glyphicon-facetime-video"></i>Videos</a></li>
-        <li><a href="trainning"><i class="glyphicon glyphicon-tent"></i>Training</a></li>
-        <li><a href="index.ejs"><i class="glyphicon glyphicon-glass"></i>Go Live</a></li>
-        <li><a href="contact"><i class="glyphicon glyphicon-comment"></i>Contact/Feedback</a></li>
-    </ul>
-
-</div>
+<% include partials/menu %>
 <div id="contactInfo">
     <h2>Contact Information</h2>
     <h4>Contact Numbers</h4>
