--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,9 @@
 <html manifest="/manifest.appcache">
 <head>
-    <title>wholesome title</title>
+    <title>QLD Health Home</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
-
 
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <!-- Latest compiled and minified CSS -->
@@ -24,19 +23,8 @@
     <img id="title" src="/HOMEbanner.png" height="13%" />
 </div>
 
-<div id="mainMenu" class="hidden">
+<% include partials/menu %>
 
-    <ul class="nav nav-stacked">
-        <li><a href="/"><i class="glyphicon glyphicon-home"></i>Home</a></li>
-        <li><a href="about"><i class="glyphicon glyphicon-question-sign"></i>About</a></li>
-        <li><a href="notice"><i class="glyphicon glyphicon-book"></i>News</a></li>
-        <li><a href="video"><i class="glyphicon glyphicon-facetime-video"></i>Videos</a></li>
-        <li><a href="trainning"><i class="glyphicon glyphicon-tent"></i>Training</a></li>
-        <li><a href="index.ejs"><i class="glyphicon glyphicon-glass"></i>Go Live</a></li>
-        <li><a href="contact"><i class="glyphicon glyphicon-comment"></i>Contact/Feedback</a></li>
-    </ul>
-
-</div>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <!-- Wrapper for slides -->
@@ -110,5 +98,12 @@
             $('#myCarousel').carousel('cycle');
         };
     }
+
+    $('.newsPanel').click(function(){
+        var url = window.location.href +"notice/"+ $(this).children().first().text();
+        console.log("url"+ url);
+        window.location.href = url;
+    });
+
 </script>
 </html>
