--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -6,7 +6,7 @@
         <li><a class="barry" href="notice"><i class="glyphicon glyphicon-book"></i>News</a></li>
         <li><a class="barry"  href="video"><i class="glyphicon glyphicon-facetime-video"></i>Videos</a></li>
         <li><a class="barry" href="Training"><i class="glyphicon glyphicon-tent"></i>Training</a></li>
-        <li><a class="barry" href="index.ejs"><i class="glyphicon glyphicon-glass"></i>Go Live</a></li>
+        <li><a class="barry" href="goLive"><i class="glyphicon glyphicon-glass"></i>Go Live</a></li>
         <li><a class="barry"  href="contact"><i class="glyphicon glyphicon-comment"></i>Contact/Feedback</a></li>
     </ul>
 
