--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,6 @@
-<html>
+<html manifest="/manifest.appcache">
 <head>
-    <title>Hey There</title>
+    <title>Contact Us</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
