--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -1,4 +1,4 @@
-<html>
+<html manifest="/manifest.appcache">
 <head>
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
