--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -50,7 +50,7 @@
                             <option> <%= obj %> </option>
                             <% }); %>
                         </select>
-                        <button id="munter">Delete Ntoice</button>
+                        <button id="munter">Delete Notice</button>
                     </fieldset>
                 </form>
             </div>
